--- a/src/styles/Searchbar.module.css
+++ b/src/styles/Searchbar.module.css
@@ -1,5 +1,8 @@
 .input {
   width: 90% !important;
-  height: 5vh !important;
+  height: 6vh !important;
+  border-radius: 9px !important;
+  border: white ridge 2px !important;
+  margin: 0.5rem 0;
 }
 /*# sourceMappingURL=Searchbar.module.css.map */
