--- a/src/styles/Searchbar.module.scss
+++ b/src/styles/Searchbar.module.scss
@@ -1,4 +1,7 @@
 .input {
   width: 90% !important;
-  height: 5vh !important;
+  height: 6vh !important;
+  border-radius: 9px !important;
+  border: white ridge 2px !important;
+  margin: 0.5rem 0;
 }
