--- a/src/App.scss
+++ b/src/App.scss
@@ -65,6 +65,37 @@ $hoverColor: rgb(49, 49, 49);
   right: 5%;
 }
 
+.m-l {
+  height: 100vh;
+  display: grid;
+  place-items: center;
+  div {
+    border: 10px solid white;
+    opacity: 0;
+    border-radius: 50%;
+    background: transparent;
+    animation: loading 3s infinite;
+  }
+}
+
+@keyframes loading {
+  0% {
+    height: 0;
+    width: 0;
+    opacity: 0;
+  }
+  50% {
+    height: 150px;
+    width: 150px;
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+    height: 0;
+    width: 0;
+  }
+}
+
 .mobile {
   position: absolute;
   left: 0;
